--- a/publico/detalheMM.html
+++ b/publico/detalheMM.html
@@ -6,8 +6,7 @@
     <title>Detalhe MM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src= "script.js" ></script>
+    <script src= "script/script.js" ></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -48,9 +47,9 @@
             <div class="card-body">
                     <h3>Compra de Ingressos</h2>
                     <label for="Quantidade">Quantidade de Ingressos:</label>
-                    <input type="number" id="Quantidade" min="1" value="1">
+                    <input type="number" id="Quantidade" min="1" max="150" value="1">
                     <p class="card-text">Preço por ingresso: R$ <span id="valor">120,00</span></p>
-                    <p class="card-text">Valor Total: R$ <span id="valor-total">120</span></p>
+                    <p class="card-text">Valor Total: R$ <span id="valortotal">120</span></p>
                     <a href="indexlogin.html" class="btn btn-success" > Comprar</a>
             </div>
             </div>
