--- a/publico/index.html
+++ b/publico/index.html
@@ -89,11 +89,11 @@
     <p>Realização Carvalho Eventos</p>
     <p>Siga-nos nas redes sociais para ficar por dentro de todos os eventos</p>
     <div class="social-links">
-      <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="Skipe"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a  class="twitter"><i class="bi bi-twitter"></i></a>
+      <a  class="facebook"><i class="bi bi-facebook"></i></a>
+      <a  class="instagram"><i class="bi bi-instagram"></i></a>
+      <a  class="Skipe"><i class="bi bi-skype"></i></a>
+      <a  class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
     <div class="copyright">
       &copy; Copyright <strong><span>CIRCUITO ARENA FEST</span></strong>. All Rights Reserved
