--- a/privado/detalheHJ.html
+++ b/privado/detalheHJ.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalhe JM</title>
+    <title>Detalhe HJ</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <script src= "script/script.js" ></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
     <header id="header" class="fixed-top d-flex justify-content-center align-items-center ">
 
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
             <li><a class="nav-link scrollto" href="index.html#shows">Shows</a></li>
-            <li><a class="nav-link scrollto " href="indexlogin.html">Login</a></li>
+            <li><a class="nav-link scrollto " href="index.html">Login</a></li>
             <li><a class="getstarted scrollto" href="#cadastro">Comprar Ingressos</a></li>
           </ul>
         </nav>
@@ -29,10 +28,10 @@
             <div class="row">
             <div class="col-md-6 p-5" >
                 <div class="card" style="width: 25rem;">
-                    <img class="card-img-top" src="assets/img/jorge-e-mateus-1571682837251_v2_800x743.jpg" alt="JM">
+                    <img class="card-img-top" src="./assets/img/1575653851.jpg" alt="HJ">
                     <div class="card-body">
-                    <h4>Jorge e Mateus</h4>
-                    <p class="card-text">Os goianos Jorge & Mateus, da cidade de Itumbiara – Goiás, ganharam projeção nacional e, hoje, são considerados uma das principais duplas do Brasil.</p>
+                    <h4>Henrique e Juliano</h4>
+                    <p class="card-text"> Consolidaram-se em todo território nacional, conhecidos como a dupla que arrasta multidões, atualmente, Henrique & Juliano acumulam dezenas de sucessos, fruto de um cuidado especial que os irmãos têm na escolha do repertório de seus projetos.</p>
                     </div>
                 
                 </div>
@@ -48,7 +47,7 @@
             <div class="card-body">
                     <h3>Compra de Ingressos</h2>
                     <label for="Quantidade">Quantidade de Ingressos:</label>
-                    <input type="number" id="Quantidade" min="1" max="150" value="1">
+                    <input type="number" id="Quantidade" min="1"max="150" value="1">
                     <p class="card-text">Preço por ingresso: R$ <span id="valor">120,00</span></p>
                     <p class="card-text">Valor Total: R$ <span id="valortotal">120</span></p>
                     <a href="indexlogin.html" class="btn btn-success" > Comprar</a>
@@ -72,19 +71,17 @@
           <p>Realização Carvalho Eventos</p>
           <p>Siga-nos nas redes sociais para ficar por dentro de todos os eventos</p>
           <div class="social-links">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="Skipe"><i class="bi bi-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a class="twitter"><i class="bi bi-twitter"></i></a>
+            <a class="facebook"><i class="bi bi-facebook"></i></a>
+            <a class="instagram"><i class="bi bi-instagram"></i></a>
+            <a class="Skipe"><i class="bi bi-skype"></i></a>
+            <a class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
           <div class="copyright">
             &copy; Copyright <strong><span>CIRCUITO ARENA FEST</span></strong>. All Rights Reserved
           </div>
         </div>
       </footer>
-
-
     
 </body>
 </html>
