--- a/privado/detalheMM.html
+++ b/privado/detalheMM.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <script src= "script/script.js" ></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header id="header" class="fixed-top d-flex justify-content-center align-items-center ">
@@ -28,7 +28,7 @@
             <div class="row">
             <div class="col-md-6 p-5" >
                 <div class="card" style="width: 25rem;">
-                    <img class="card-img-top" src="assets/img/maiara.jpg" alt="MM">
+                    <img class="card-img-top" src="./assets/img/maiara.jpg" alt="MM">
                     <div class="card-body">
                     <h4>Maiara e Maraísa</h4>
                     <p class="card-text">Maiara e Maraísa são um dos principais destaques do atual cenário da música sertaneja.<p>
@@ -71,11 +71,11 @@
           <p>Realização Carvalho Eventos</p>
           <p>Siga-nos nas redes sociais para ficar por dentro de todos os eventos</p>
           <div class="social-links">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="Skipe"><i class="bi bi-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a class="twitter"><i class="bi bi-twitter"></i></a>
+            <a  class="facebook"><i class="bi bi-facebook"></i></a>
+            <a  class="instagram"><i class="bi bi-instagram"></i></a>
+            <a  class="Skipe"><i class="bi bi-skype"></i></a>
+            <a  class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
           <div class="copyright">
             &copy; Copyright <strong><span>CIRCUITO ARENA FEST</span></strong>. All Rights Reserved
