--- a/privado/index.html
+++ b/privado/index.html
@@ -6,7 +6,7 @@
     <title>pagina inicial</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     
 <body>
 
@@ -16,8 +16,8 @@
     <ul>
       <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
       <li><a class="nav-link scrollto" href="#shows">Shows</a></li>
-      <li><a class="nav-link scrollto " href="indexlogin.html">Login</a></li>
-      <li><a class="getstarted scrollto" href="#cadastro">Comprar Ingressos</a></li>
+      <li><a class="nav-link scrollto " href="/logout">Sair</a></li>
+      <li><a class="getstarted scrollto" href="indexlogin.html">Login</a></li>
     </ul>
   </nav>
 </header>
