--- a/publico/indexlogin.html
+++ b/publico/indexlogin.html
@@ -6,7 +6,7 @@
     <title>Loggin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header id="header" class="fixed-top d-flex justify-content-center align-items-center ">
@@ -14,9 +14,9 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="#shows">Shows</a></li>
-            <li><a class="nav-link scrollto " href="indexlogin.html">Login</a></li>
-            <li><a class="getstarted scrollto" href="#cadastro">Comprar Ingressos</a></li>
+            <li><a class="nav-link scrollto" href="#index.html#shows">Shows</a></li>
+            <li><a class="nav-link scrollto " href="/logout">Sair</a></li>
+            <li><a class="getstarted scrollto" href="indexlogin.html">Login</a></li>
           </ul>
         </nav>
     </header>
@@ -24,20 +24,20 @@
         <br><br> 
         <section class="login">
             <br><br>
-            <form  id="Formulario" method="post">
+            <form id="Formulario" method="post" action="/login">
             <div class="card">
             <div class="card-body">
              <h1>Entrar</h1>
              <p>Para adiquirir seu ingresso, faça um loggin de acesso!</p>
              <div>
-                <label for="nome" class="form-label"><i class="bi bi-person"></i> Usuario:</label>
-                <input type="text" class="form-control" id="nome" required>
+                <label for="usuario" class="form-label"><i class="bi bi-person"></i> Usuario:</label>
+                <input type="text" class="form-control" id="usuario" name="usuario">
              </div>
              <div class="mb-3">
                 <label for="senha"><i class="bi bi-lock"></i>Senha:</label>
-                <input type="password" class="form-control" id="senha" maxlength="4"> 
+                <input type="password" class="form-control" id="senha" name="senha" maxlength="10"> 
                 </div>
-                <input class="btn btn-primary" value="Entrar">
+                <button type="submit" class="btn btn-primary" >Entrar</button>
             </div>
            </form>
           
@@ -50,11 +50,11 @@
           <p>Realização Carvalho Eventos</p>
           <p>Siga-nos nas redes sociais para ficar por dentro de todos os eventos</p>
           <div class="social-links">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="Skipe"><i class="bi bi-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a  class="twitter"><i class="bi bi-twitter"></i></a>
+            <a  class="facebook"><i class="bi bi-facebook"></i></a>
+            <a  class="instagram"><i class="bi bi-instagram"></i></a>
+            <a  class="Skipe"><i class="bi bi-skype"></i></a>
+            <a  class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
           <div class="copyright">
             &copy; Copyright <strong><span>CIRCUITO ARENA FEST</span></strong>. All Rights Reserved
