finalização do projeto

--- a/privado/detalheHJ.html
+++ b/privado/detalheHJ.html
@@ -16,8 +16,8 @@
           <ul>
             <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
             <li><a class="nav-link scrollto" href="index.html#shows">Shows</a></li>
-            <li><a class="nav-link scrollto " href="index.html">Login</a></li>
-            <li><a class="getstarted scrollto" href="#cadastro">Comprar Ingressos</a></li>
+            <li><a class="nav-link scrollto " href="/logout">Sair</a></li>
+            
           </ul>
         </nav>
     </header>
