finalização do projeto

--- a/publico/indexlogin.html
+++ b/publico/indexlogin.html
@@ -28,7 +28,7 @@
             <div class="card">
             <div class="card-body">
              <h1>Entrar</h1>
-             <p>Para adiquirir seu ingresso, faça um loggin de acesso!</p>
+             <p>Para adquirir seu ingresso, faça um loggin de acesso!</p>
              <div>
                 <label for="usuario" class="form-label"><i class="bi bi-person"></i> Usuario:</label>
                 <input type="text" class="form-control" id="usuario" name="usuario">
