concluindo a integração do frontend com backend

--- a/publico/indexlogin.html
+++ b/publico/indexlogin.html
@@ -15,6 +15,7 @@
           <ul>
             <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
             <li><a class="nav-link scrollto" href="#index.html#shows">Shows</a></li>
+            <li><a class="nav-link scrollto" href="cadastroevento.html">Cadastro de Evento</a></li>
             <li><a class="nav-link scrollto " href="/logout">Sair</a></li>
             <li><a class="getstarted scrollto" href="indexlogin.html">Login</a></li>
           </ul>
